force-app/main/default/objects/Evidence__c/Evidence__c.object-meta.xml
<CustomObject>
    <label>Evidence</label>
    <nameField>
        <label>Evidence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evidence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>