force-app/main/default/objects/Evidence__c/fields/Audit_Finding__c.field-meta.xml
<CustomField>
    <fullName>Audit_Finding__c</fullName>
    <label>Audit Finding</label>
    <referenceTo>Audit_Finding__c</referenceTo>
    <relationshipLabel>Evidence</relationshipLabel>
    <relationshipName>Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>