force-app/main/default/objects/Evidence__c/fields/Client_Environment__c.field-meta.xml
<CustomField>
    <fullName>Client_Environment__c</fullName>
    <label>Client Environment</label>
    <referenceTo>Client_Environment__c</referenceTo>
    <relationshipLabel>Evidence</relationshipLabel>
    <relationshipName>Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>