force-app/main/default/objects/Evidence__c/fields/Evidence_Source__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Source__c</fullName>
    <label>Evidence Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>