force-app/main/default/objects/Evidence__c/fields/Evidence_Type__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Type__c</fullName>
    <label>Evidence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Screenshot</fullName>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
            <value>
                <fullName>Config</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>